--- a/app/github/github.component.html
+++ b/app/github/github.component.html
@@ -1,5 +1,29 @@
-<hr>
-<br>
-<h2>Forms</h2>
-
-<p> As users enter form data, we capture their changes and update an instance of a model. We can't layout the form until we know what the model looks like. A model can be as simple as a "property bag" that holds facts about a thing of application importance. That describes well our Hero class with its three required fields (id, name, power) and one optional field (alterEgo). </p>
+<div *ngIf="user">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">{{user.name}}</h3>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-thumbnail github-avatar" src="{{user.avatar_url}}">
+                </div>
+                <div class="col-md-8">
+                    <div class="stats">
+                    <span class="label label-default">{{user.public_repos}} Public Repos</span>
+                    <span class="label label-primary">{{user.public_gists}} Public Gists</span>
+                    <span class="label label-success">{{user.followers}} Followers</span>
+                    <span class="label label-info">{{user.following}} Following</span>
+                    </div>
+                    <br>
+                    <ul class="list-group">
+                        <li class="list-group-item"><strong>Username: </strong>{{user.login}}</li> 
+                         <li class="list-group-item"><strong>Location: </strong>{{user.location}}</li>
+                          <li class="list-group-item"><strong>Email: </strong>{{user.email}}</li>
+                           <li class="list-group-item"><strong>Blog: </strong>{{user.blog}}</li> 
+                            <li class="list-group-item"><strong>Member Since: </strong>{{user.created_at}}</li>  
+                    </ul>
+                </div>    
+            </div>
+        </div>
+    </div>
