--- a/app/app.component.html
+++ b/app/app.component.html
@@ -7,13 +7,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Github Search</a>
+          <a class="navbar-brand" href="#">Github Finder</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
            
           </ul>
-        </div><!--/.nav-collapse -->
+        </div> <!--/.nav-collapse -->
       </div>
     </nav>
 
@@ -21,9 +21,9 @@
 
      <div class="row">
         <div class="col-md-8 col-md-offset-2">
-             <jg-github></jg-github>
+             <jg-github></jg-github>  <!-- github.component.html -->
         </div>    
      </div>
 
-    </div><!-- /.container -->
+    </div>  <!-- /.container -->
 
